# Quadruped_SpotMicro_Simulation

./: Pybullet.ipynb  README.md  fw_validation.py
src/quadruped_controller/: package.xml  setup.py
src/quadruped_controller/quadruped_controller/: controller_node.py
src/quadruped_robot/: CMakeLists.txt  package.xml
src/quadruped_robot/config/: control.yaml
src/quadruped_robot/launch/: debug.launch.py  display.launch.py  gazebo.launch.py  spawn_robot_ros2.launch.py
src/quadruped_robot/meshes/: body_link.STL  fle_link.STL  fls_link.STL  flw_link.STL  fre_link.STL  frs_link.STL  frw_link.STL  lidar_link.STL  rle_link.STL  rls_link.STL  rlw_link.STL  rre_link.STL  rrs_link.STL  rrw_link.STL
src/quadruped_robot/urdf/: quadruped_robot.csv  quadruped_robot.urdf.xacro
src/quadruped_robot/worlds/: empty_world.world
