<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>quadruped_robot</name>
  <version>0.0.0</version>
  <description>Package to control quadruped spot micro</description>
  <maintainer email="iamsid@umd.edu">siddhant</maintainer>
  <maintainer email="rahulk99@umd.edu">rahul</maintainer>
  <maintainer email="masumth@umd.edu">masum</maintainer>
  <maintainer email="jshah310@umd.edu">jigar</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <build_depend>xacro</build_depend>
  <depend>ros2_control</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.." />
  </export>
</package>
